# rag-agent-opensearch

./: .gitignore  README.md  api.py  evaluate.py  ingest.py  main.py  memory_eval_results.json  memory_eval_results_with_hybrid_search.json  pyproject.toml  requirements.txt  service.py
templates/: index.html
